siab.template.yaml
apiVersion: v1
kind: List
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      build: siab
    name: rhel7-minimal
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/rhel7-minimal
      from:
        kind: DockerImage
        name: registry.access.redhat.com/rhel7-minimal
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      build: siab
    name: siab
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: siab:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: master
        uri: https://github.com/chamilton614/ocp-shellinabox.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: rhel7-minimal:latest
      type: Docker
    successfulBuildsHistoryLimit: 5
    triggers:
    - type: ConfigChange
    - imageChange:
      type: ImageChange
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: siab
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: siab
    name: siab
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: siab
      deploymentconfig: siab
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: siab
          deploymentconfig: siab
      spec:
        containers:
        - image: siab
          imagePullPolicy: Always
          name: siab
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 64Mi
            requests:
              cpu: 250m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: siab
        serviceAccountName: siab
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - siab
        from:
          kind: ImageStreamTag
          name: siab:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      build: siab
    name: siab
  spec:
    lookupPolicy:
      local: false
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: siab
    name: siab
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: siab
      deploymentconfig: siab
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 600s
      openshift.io/host.generated: "true"
    labels:
      app: siab
    name: siab
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: siab
      weight: 100
    wildcardPolicy: None
